Update Wedding Invitation Syairi Maya

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,12 @@
   font-weight: normal;
   font-style: normal;
 }
-
+/* =======================================================
+*
+* 	Template Style 
+*	Edit this section
+*
+* ======================================================= */
 body {
   font-family: "Source Sans Pro", Arial, sans-serif;
   font-weight: 400;
